[gd_scene load_steps=8 format=3 uid="uid://bj2jdluykfdo"]

[ext_resource type="Script" path="res://Notas/nota.gd" id="1_fm2tj"]
[ext_resource type="Texture2D" uid="uid://buf0wsisncx1g" path="res://Notas/Button_note_-_Default.png" id="1_po17o"]
[ext_resource type="Texture2D" uid="uid://dkyrtage82cs1" path="res://Notas/Button_note_-_Presset.png" id="2_iacbi"]
[ext_resource type="Texture2D" uid="uid://b7w0xye1t843" path="res://Notas/Button_note_-_Hover.png" id="3_uudjf"]
[ext_resource type="Texture2D" uid="uid://clcr8g1f7cr2s" path="res://Notas/Block_notas.png" id="5_27dx5"]

[sub_resource type="Gradient" id="Gradient_1mynm"]
colors = PackedColorArray(0, 0, 0, 0.235294, 0, 0, 0, 0.27451)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a2p4v"]
gradient = SubResource("Gradient_1mynm")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fm2tj")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -37.0
offset_top = -25.0
offset_right = 1166.0
offset_bottom = 669.0
texture = SubResource("GradientTexture1D_a2p4v")

[node name="TextureButton2" type="TextureButton" parent="."]
visible = false
offset_left = 3.0
offset_top = 547.0
offset_right = 202.0
offset_bottom = 648.0
texture_normal = ExtResource("1_po17o")
texture_pressed = ExtResource("2_iacbi")
texture_hover = ExtResource("3_uudjf")

[node name="Label" type="Label" parent="TextureButton2"]
layout_mode = 0
offset_left = 122.0
offset_top = 38.0
offset_right = 162.0
offset_bottom = 61.0
text = "Cerrar"

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 547.0
offset_right = 202.0
offset_bottom = 648.0
texture_normal = ExtResource("1_po17o")
texture_pressed = ExtResource("2_iacbi")
texture_hover = ExtResource("3_uudjf")

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 122.0
offset_top = 38.0
offset_right = 162.0
offset_bottom = 61.0
text = "Abrir"

[node name="BlockNotas" type="Sprite2D" parent="."]
visible = false
position = Vector2(593, 324)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_27dx5")

[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
